Close to output!

--- a/_posts/repo/en/2017-04-13-mpc.md
+++ b/_posts/repo/en/2017-04-13-mpc.md
@@ -3,8 +3,8 @@ layout: post_page
 lang: en
 ref: repo
 post_url: mpc
-title: Model Preview Control
-permalink: en/git-repository/mpc
+title: Copra
+permalink: en/git-repository/copra
 ---
 
 This is library has been developed to answer to the model preview control problem.
@@ -17,17 +17,16 @@ In this article i will describe to what a mpc is made for, why you should use it
 <!--more-->
 
 # So, what is a MPC?
-MPC stands for Model Preview Control.
+MPC stands for Model Predictive Control.
 It is used to solve a problem in a horizon of time by minimizing a cost function.
 Be aware that the library here is made to solve Linear Time Invariant (LTI) discrete systems.
 This means that the behavior of the system does not change through time.
 
-So, in simple words, you can use a mpc to find a trajectory to a targeted point or nnd the control that leads to a given trajectory.
+So, in simple words, you can use a mpc to find the control that leads to a given trajectory/target.
 
 ## Continuous system
 Generally, all start with a beautiful continuous system.
-Unfortunately, most of the time it is hard to find a viable analytical solution over time.
-But it is possible to perform a discretization of the system, and this system, can be solved by the MPC.
+As it is hard to solve a continuous system fastly, a discretization is done, and this system can be solved by the MPC.
 
 First, let's see what kind of system can work. Any system of the form
 
@@ -46,15 +45,15 @@ To show how the MPC finds out the solution, we need to develop the equation abov
 We need first to perform a recurrence and see what comes out at a step \\(k\\).
 
 $$
-\begin{eqnarray}
-    \mathbf{x}\_1 & = & A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d} \\\\
-    \mathbf{x}\_2 & = & A\mathbf{x}\_1 + B\mathbf{u}\_1 + \mathbf{d} \\\\
-                  & = & A(A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
-                  & = & A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d} \\\\
-    \mathbf{x}\_3 & = & A\mathbf{x}\_2 + B\mathbf{u}\_2 + \mathbf{d} \\\\
-                  & = & A(A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
-                  & = & A^3\mathbf{x}\_0 + [A^2B\ AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1\ \mathbf{u}^T\_2]^T + A^2\mathbf{d} + A\mathbf{d} + \mathbf{d}
-\end{eqnarray}
+\begin{align}
+    \mathbf{x}\_1 & = A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d} \\\\
+    \mathbf{x}\_2 & = A\mathbf{x}\_1 + B\mathbf{u}\_1 + \mathbf{d} \\\\
+                  & = A(A\mathbf{x}\_0 + B\mathbf{u}\_0 + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
+                  & = A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d} \\\\
+    \mathbf{x}\_3 & = A\mathbf{x}\_2 + B\mathbf{u}\_2 + \mathbf{d} \\\\
+                  & = A(A^2\mathbf{x}\_0 + [AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1]^T + A\mathbf{d} + \mathbf{d}) + B\mathbf{u}\_1 + \mathbf{d} \\\\
+                  & = A^3\mathbf{x}\_0 + [A^2B\ AB\ B][\mathbf{u}^T\_0\ \mathbf{u}^T\_1\ \mathbf{u}^T\_2]^T + A^2\mathbf{d} + A\mathbf{d} + \mathbf{d}
+\end{align}
 $$
 
 It is then easy to show that the recurrence of \\(N\\) steps can be written:
@@ -114,7 +113,7 @@ $$
     \right].
 $$
 
-Finally, given a desired target/trajectory \\(\mathbf{X}\_T\\) we compute the horizon using a QP solver with a desired cost function
+Finally, given a desired target/trajectory \\(\mathbf{X}\_T\\) we compute the horizon using a QP solver with a desired cost function.
 
 # Let's dive into the library
 The definition of the matrices above is really important to have a proper use of the library.
@@ -128,11 +127,11 @@ It defines the whole system and creates the \\(\Phi\\), \\(\Psi\\) and \\(\mathb
 It is better to create a shared pointer of the instance.
 
 ```c++
-auto ps = std::make_shared<mpc::PreviewSystem>();
+auto ps = std::make_shared<copra::PreviewSystem>();
 // Initialize the system
 ps->system(A, B, d, x_0, nrStep);
 // Initialize the system in the constructor
-auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, nrStep);
+auto ps = std::make_shared<copra::PreviewSystem>(A, B, d, x_0, nrStep);
 ```
 
 ## The mpc
@@ -140,15 +139,15 @@ The mpc is written in the `LMPC.h` file.
 Creating an instance of an mpc is also fairly easy.
 
 ```c++
-mpc::LMPC controller(ps);
+copra::LMPC controller(ps);
 // Build the system and solve the mpc
 controller.solve();
 ```
 
-It is also possible to (re)initialize the system used by the mpc.
+It is also possible to (re)initialize the system used by the copra.
 
 ```c++
-mpc::LMPC controller();
+copra::LMPC controller();
 // (Re)initialize the mpc with the new system
 controller.initializeController(ps);
 ```
@@ -164,7 +163,7 @@ Eigen::VectorXd control = controller.control();
 The library provides several types of constraints.
 All the constraints can be created using step-matrix or whole-matrix.
 We will see that a mixed of the two is also possible.
-They also need to be wrapped in a shared pointer in order to be passed to the mpc.
+They also need to be wrapped in a shared pointer in order to be passed to the copra.
 
 ### Trajectory Constraints
 We distinguish two types of trajectory constraints: The trajectory constraint \\(E\mathbf{X} \leq \mathbf{f}\\) or \\(E\mathbf{X} = \mathbf{f}\\)
@@ -174,12 +173,12 @@ Note that the latter can be rewritten to produce the former.
 ```c++
 // Create an inequality constraint
 // E is step-matrix or whole-matrix, f is step-vector or whole-vector.
-auto ineqTrajConstr = std::make_shared<mpc::TrajectoryConstraint>(E, f);
+auto ineqTrajConstr = std::make_shared<copra::TrajectoryConstraint>(E, f);
 // Create an equality constraint
-auto eqTrajConstr = std::make_shared<mpc::TrajectoryConstraint>(E, f, false);
+auto eqTrajConstr = std::make_shared<copra::TrajectoryConstraint>(E, f, false);
 // Create a bound constraint
 // lower and upper are step-vector or whole-vector
-auto boundTrajConstr = std::make_shared<mpc::TrajectoryBoundConstraint>(lower, upper);
+auto boundTrajConstr = std::make_shared<copra::TrajectoryBoundConstraint>(lower, upper);
 ```
 
 Note: to assign infinite born, you have to include the stl `<limits>` and use `std::numeric_limits<double>::max()`. In python side, you have to use `float('Inf')`.
@@ -191,12 +190,12 @@ and the control bound constraint \\(\underline{\mathbf{U}} \leq \mathbf{U} \leq 
 ```c++
 // Create an inequality constraint
 // G is step-matrix or whole-matrix, f is step-vector or whole-vector.
-auto ineqControlConstr = std::make_shared<mpc::ControlConstraint>(E, f);
+auto ineqControlConstr = std::make_shared<copra::ControlConstraint>(E, f);
 // Create an equality constraint
-auto eqControlConstr = std::make_shared<mpc::ControlConstraint>(E, f, false);
+auto eqControlConstr = std::make_shared<copra::ControlConstraint>(E, f, false);
 // Create a bound constraint
 // lower and upper are step-vector or whole-vector
-auto boundControlConstr = std::make_shared<mpc::ControlBoundConstraint>(lower, upper);
+auto boundControlConstr = std::make_shared<copra::ControlBoundConstraint>(lower, upper);
 ```
 
 ### Mixed Constraints
@@ -207,9 +206,9 @@ As always:
 ```c++
 // Create an inequality constraint
 // E is step-matrix or whole-matrix,  G is step-matrix or whole-matrix, f is step-vector or whole-vector.
-auto ineqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, G, f);
+auto ineqMixedConstr = std::make_shared<copra::MixedConstraint>(E, G, f);
 // Create an equality constraint
-auto eqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, G, f, false);
+auto eqMixedConstr = std::make_shared<copra::MixedConstraint>(E, G, f, false);
 ```
 
 ### Adding and updating a constraint
@@ -232,7 +231,7 @@ The target cost function minimizes \\(\|\|M\mathbf{x}_N + \mathbf{p}\|\|\\).
 
 ```c++
 // Create a target cost
-auto targetCost = std::make_shared<mpc::TargetCost>(M, p);
+auto targetCost = std::make_shared<copra::TargetCost>(M, p);
 ```
 
 ### Trajectory Cost
@@ -241,7 +240,7 @@ The trajectory cost function minimizes \\(\|\|M\mathbf{X} + \mathbf{p}\|\|\\).
 ```c++
 // Create a trajectory cost
 // M is step-matrix or whole-matrix, p is step-vector or whole-vector.
-auto trajectoryCost = std::make_shared<mpc::TrajectoryCost>(M, p);
+auto trajectoryCost = std::make_shared<copra::TrajectoryCost>(M, p);
 ```
 
 ### Control Cost
@@ -250,7 +249,7 @@ The control cost minimizes \\(\|\|N\mathbf{U} + \mathbf{p}\|\|\\).
 ```c++
 // Create a control cost
 // M is step-matrix or whole-matrix, p is step-vector or whole-vector.
-auto ControlCost = std::make_shared<mpc::ControlCost>(N, p);
+auto ControlCost = std::make_shared<copra::ControlCost>(N, p);
 ```
 
 ### Mixed Cost
@@ -259,41 +258,55 @@ The mixed cost minimizes \\(\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|\\).
 ```c++
 // Create a mixed cost
 // M is step-matrix or whole-matrix, N is step-matrix or whole-matrix, p is step-vector or whole-vector.
-auto mixedCost = std::make_shared<mpc::MixedCost>(M, N, p);
+auto mixedCost = std::make_shared<copra::MixedCost>(M, N, p);
 ```
 
 ## Cost and constraint specificities
 There are several helper tools for cost functions and constraints.
 
 ### Removal
-There are two ways of deleting a constraint from the mpc.
+There are two ways of deleting a constraint from the copra.
 The main way is to let the mpc handles it.
 In the `solve` function and at the end, the mpc checks whether or not a constraint needs to be deleted.
 A constraint is deleted if the user (you) has deleted his shared pointer of the constraint.
-If you keep a shared pointer of the constraint alive, the constraint remains in the mpc.
+If you keep a shared pointer of the constraint alive, the constraint remains in the copra.
 Another way is to call the function `removeCost` and `removeConstraint`
 
 ### The autoSpan function
 The `autoSpan` function is present in all constraints and cost.
 This method needs to be called if you have created a constraint that mixes step-matrix/vector with whole-matrix/vector.
-For example, if you have a constant matrix \\(G\\) (so same matrix for one step) for the control constraint and
-a whole-vector \\(\mathbf{f}\\) (so for the full horizon), you can pass the two matrices to the constraint and then call the autoSpan function.
+For example, if you have a constant step-matrix \\(G\\) and a whole-vector \\(\mathbf{f}\\), 
+you can pass the two matrices to the constraint and then call the autoSpan function.
 
 ## Changing the QP solver
 Depending on your compilation state, 4 QP solvers are implemented.
 You can change at anytime the QP to use for solving your problem.
 The current available QP are:
+
  * QuadProg (Default one)
  * QLD
  * Gurobi
  * LSSOL (need commercial license)
+
 To change the QP:
 
 ```c++
 // Create an instance of a mpc with a different QP
-mpc::MPCTypeFull controller(mpc::SolverFlag::QLD)
+copra::LMPC controller(copra::SolverFlag::QLD)
 // Change the QP at any time
-controller.selectQPSolver(mpc::SolverFlag::GUROBIDense)
+controller.selectQPSolver(copra::SolverFlag::GUROBIDense)
+```
+
+If the default setting of a QP solver is not enough, it is possible to give the controller a user-defined QP.
+
+```c++
+// Create your QP
+std::unique_ptr<Eigen::QLD> solver = solverFactory(copra::SolverFlag::QLD);
+// Make change here
+solver->SI_feasibilityTolerance(1e-8);
+// ...
+// Give it to the QP
+controller.useSolver(std::move(solver));
 ```
 
 ## Python users
@@ -329,154 +342,6 @@ When only step-matrix and step-vector are given and because of the sparsity of t
 Note that for some constraints (control constraints and bound constraints) a move is perform for whole-matrix/vector. 
 
 Sparse matrix will be used to improve performance in future release.
-
-## Examples
-I will show in this section a step-by-step how-to-do example.
-This example aims to solve a common problem in humanoid robot dynamic walk.
-In dynamic walk, a model predictive control is used to find a trajectory for the Center of Mass (CoM) \\(s\\) of the robot considering its Zero-momentum Point (ZMP). 
-The ZMP is a point on the ground which must stay inside the polygon defined by the foot of the robot. 
-Supposing the COMof the robot does not move vertically, the position \\(z\\) of the CoP is
-$$
-    z = s - \frac{h_{CoM}}{g}\ddot{s}
-$$
-
-This equation can be written as a linear system.
-
-$$
-    \dot{x} = Ix + 
-$$
-
-From it, we can easily perform the discretization.
-
-$$
-    Discretize system
-$$
-
-### Full example in C++
-First of all, the headers
-
-```c++
-// stl headers
-#include <iostream>
-#include <memory>
-#include <utility>
-
-// mpc headers
-#include <mpc/constraints.h>
-#include <mpc/previewController.h>
-#include <mpc/PreviewSystem.h>
-```
-
-then need to create the system
-
-```c++
-double T = 0.2;
-Eigen::MatrixXd A(Eigen::MatrixXd::Identity(4, 4));
-A(0, 2) = T;
-A(2, 3) = T;
-Eigen::MatrixXd B(4, 2);
-B << T*T/2,     0,
-         0, T*T/2, 
-         T,     0, 
-         0,     T;
-d = ?;
-x_0 = ?;
-x_d = ?;
-int nrStep = 10;
-auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, x_d, nrStep);
-```
-
-Then we create the mixed constraint 
-
-```c++
-Eigen::MatrixXd E, G;
-Eigen::VectorXd f;
-
-// From Polytope will set the matrix E, G and f
-FromPolytope(E, G, f);
-constr = std::make_shared<mpc::MixedConstraint>(E, G, f);
-```
-
-Create the mpc and solve
-
-```c++
-mpc::MPCTypeLast controller(ps);
-controller.addConstraint(constr);
-controller.weights(Eigen::Vector4d(10000, 10000, 100, 100), Eigen::Vector2d(1, 1));
-controller.solve();
-```
-
-Finally, get the results
-
-```c++
-Eigen::VectorXd trajectory(controller.trajectory());
-Eigen::VectorXd control(controller.control());
-int halfLen = trajectory.rows() / 2; // = 4 * (nrSteps + 1) / 2
-Eigen::VectorXd comPos(halfLen)
-Eigen::VectorXd comVel(halfLen)
-for (int i = 0; i < halfLen; i += 2) {
-    comPos.segment(2 * i, 2) = trajectory.segment(2 * i, 2);
-    comVel.segment(2 * i, 2) = trajectory.segment(2 * (i + 1), 2);
-}
-```
-
-### Full example in Python
-First of all, the headers
-
-```python
-from minieigen import *
-import mpc
-```
-
-then need to create the system
-
-```python
-T = 0.2
-A = MatrixXd.Identity(4, 4)
-A[0, 2] = T
-A[2, 3] = T
-B = MatrixXd([[T*T/2,     0],
-              [0,     T*T/2], 
-              [T,         0], 
-              [0,         T]])
-d = ?
-x_0 = ?
-x_d = ?
-nrStep = 10
-ps = mpc.NewPreviewSystem(A, B, d, x_0, x_d, nrStep);
-```
-
-Then we create the mixed constraint 
-
-```python
-# From Polytope will set the matrix E, G and f
-E, G, f = FromPolytope()
-constr = mpc.NewMixedConstraint(E, G, f)
-```
-
-Create the mpc and solve
-
-```python
-controller = mpc.MPCTypeLast(ps)
-controller.addConstraint(constr)
-controller.weights(VectorXd([10000, 10000, 100, 100]), Vector2d(1, 1))
-controller.solve();
-```
-
-Finally, get the results
-
-```python
-trajectory = controller.trajectory();
-control = controller.control();
-halfLen = trajectory.rows() / 2; # = 4 * (nrSteps + 1) / 2
-comPos = VectorXd.Identity(halfLen)
-comVel = VectorXd.Identity(halfLen)
-for i in xrange(halfLen, 0, 2):
-    comPos[i] = trajectory[2 * i];
-    comPos[i + 1] = trajectory[2 * i + 1];
-    comVel[i] = trajectory[2 * (i + 1)];
-    comVel[i + 1] = trajectory[2 * (i + 1) + 1]
-```
 
 ## Pymanoid
 [Pymanoid](https://github.com/stephane-caron/pymanoid) is library developed in python by [Stéphane Caron](https://scaron.info/) which allows you to use the model preview controller for motion planning and ele.
