--- a/_posts/repo/fr/2017-04-13-mpc.md
+++ b/_posts/repo/fr/2017-04-13-mpc.md
@@ -3,8 +3,8 @@ layout: post_page
 lang: fr
 ref: repo
 post_url: mpc
-title: Model Preview Control
-permalink: fr/git-repository/mpc
+title: Copra
+permalink: fr/git-repository/copra
 ---
 
 Cette librairie a été développée pour résoudre le problème du contrôle prédictif. 
@@ -17,7 +17,7 @@ Dans cet artcile, je vais décrire en quoi un mpc est utile, pourquoi l'utiliser
 <!--more-->
 
 # Un MPC, c'est quoi ?
-MPC est l'acronyme de `Model Preview Control` ou en français `Modèle de Contrôle Prédictif`.
+MPC est l'acronyme de `Model Predictive Control` ou en français `Modèle de Contrôle Prédictif`.
 C'est utile pour trouver une solution dans un horizon de temps donné, cela en minimisant une fonction de coût.
 La librairie ne peut que résoudre des systèmes linéaires invariants dans le temps i.e. le système ne change pas de comportement dans le temps.
 
@@ -25,15 +25,14 @@ De manière plus simple, un mpc est fait pour rechercher une trajectoire qui mè
 
 ## Systèmes continus
 Habituellement, tout commence par un beau système linéaire.
-Et dans la plupart des cas, il est difficile d'en extraire une solution analytique dans le temps.
-Et du coup, il faut discrétiser le système qui alors devient résoluble par le mpc.
+Comme il est difficile de résoudre le problème analytiquement et rapidement, il faut discrétiser le système qui devient alors résoluble par le mpc.
 
-REgardons tout d'abord quels types de système peuvent convenir.
+Regardons tout d'abord quels types de système peuvent convenir.
 Tout système de la forme
 
 $$ \mathbf{\dot{s}} = A\_c\mathbf{s} + B\_c\mathbf{u} + \mathbf{d}\_c $$
 
-convient. \\(\mathbf{s}\\) le vecteur d'état du système et \\(\mathbf{u}\\) le vecteur de contrôle.
+convient. \\(\mathbf{s}\\) est le vecteur d'état du système et \\(\mathbf{u}\\) le vecteur de contrôle.
 Après discrétisation d'un pas de temps \\(T\\), le système devient :
 
 $$ \mathbf{s}\_{k+1} = A\mathbf{s}\_k + B\mathbf{u}\_k + \mathbf{d} $$
@@ -114,64 +113,56 @@ $$
     \right].
 $$
 
-Finalement, considérant une valeur désirée/une trajectoire désirée \\(\mathbf{X}\_T\\) on calcule sur l'horizon de temps choisi et considérant la fonction de coût suivante
-
-$$
-(\mathbf{X} - \mathbf{X}\_T)^TW_X(\mathbf{X} - \mathbf{X}\_T) + \mathbf{U}^TW\_U\mathbf{U}.
-$$
+Finalement, considérant une valeur désirée/une trajectoire désirée \\(\mathbf{X}\_T\\) on calcule sur l'horizon de temps choisi et considérant une fonction de coût.
 
 # La librairie de plus près
 La compréhension des matrices ci-dessus est importante car elle permet de mieux cerner le fonctionnement de la librairie.
 Son développement a été fait avec les outills de c++14. Hormis la librairie c++ standard, j'ai utilisé [eigen](http://eigen.tuxfamily.org) pour la gestion des matrices.
 Enfin, et pour la suite, on appelle matrice-pas (resp. vecteur-pas) une matrice (resp. un vecteur) de la dimension d'un pas de temps et matrice-total (resp. vecteur-total) une matrice (resp. un vecteur) de la dimension de tous les pas de temps.
 
-## Le système
-Le système est écrit dans le fichier `PreviewSystem.h`.
-Il définit l'ensemble du système, alloue et construit les variables \\(\Phi\\), \\(\Psi\\) et \\(\mathbf{\xi}\\).
-Il est nécessaire de créer un shared pointer pour ce système.
+## The system
+The system is written in the `PreviewSystem.h` file.
+It defines the whole system and creates the \\(\Phi\\), \\(\Psi\\) and \\(\mathbf{\xi}\\) matrices and vector.
+It is better to create a shared pointer of the instance.
 
 ```c++
-auto ps = std::make_shared<mpc::PreviewSystem>();
-// Initialise le système
-ps->system(A, B, d, x_0, x_traj, nrStep);
-// Initialise le système dans le constructeur
-auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, x_traj, nrStep);
+auto ps = std::make_shared<copra::PreviewSystem>();
+// Initialize the system
+ps->system(A, B, d, x_0, nrStep);
+// Initialize the system in the constructor
+auto ps = std::make_shared<copra::PreviewSystem>(A, B, d, x_0, nrStep);
 ```
 
-## Le mpc
-Le mpc est quant à lui écrit dans le fichier `previewController.h`.
-Il y a deux versions: `MPCTypeFull` et `MPCTypeLast`.
-Dans la cas où on cherche à se rapprocher d'une trajectoire, il faut utiliser la première version.
-Pour un point final désiré, le second doit être utilisé.
-Créer le mpc est chose facile.
+## The mpc
+The mpc is written in the `LMPC.h` file.
+Creating an instance of an mpc is also fairly easy.
 
 ```c++
-mpc::MPCTypeFull controller(ps);
-// Construit le système et résout le problem
+copra::LMPC controller(ps);
+// Build the system and solve the mpc
 controller.solve();
 ```
 
-Il est aussi possible de (ré)initialiser le mpc avec un autre système.
+It is also possible to (re)initialize the system used by the copra.
 
 ```c++
-mpc::MPCTypeFull controller();
-// (Ré)initialse le mpc avec un nouveau système
+copra::LMPC controller();
+// (Re)initialize the mpc with the new system
 controller.initializeController(ps);
 ```
 
-Pour récupérer les résultate, faites-en juste la demade :)
+To get the results, you just need to call it :)
 
 ```c++
 Eigen::VectorXd trajectory = controller.trajectory();
 Eigen::VectorXd control = controller.control();
 ```
 
-## Les contraintes
-La librairie fournit plusieurs types de contraintes.
-Elles peuvent toutes être crées avec matrice-pas/vecteur-pas ou matrice-total/vecteur-total.
-Plus tard, on montrera qu'on peut aussi mélanger les deux.
-Les contraintes doivent aussi être construites
-They also need to be wrapped in a shared pointer in order to pass them to the mpc.
+## The constraints
+The library provides several types of constraints.
+All the constraints can be created using step-matrix or whole-matrix.
+We will see that a mixed of the two is also possible.
+They also need to be wrapped in a shared pointer in order to be passed to the copra.
 
 ### Trajectory Constraints
 We distinguish two types of trajectory constraints: The trajectory constraint \\(E\mathbf{X} \leq \mathbf{f}\\) or \\(E\mathbf{X} = \mathbf{f}\\)
@@ -181,12 +172,12 @@ Note that the latter can be rewritten to produce the former.
 ```c++
 // Create an inequality constraint
 // E is step-matrix or whole-matrix, f is step-vector or whole-vector.
-auto ineqTrajConstr = std::make_shared<mpc::TrajectoryConstraint>(E, f);
+auto ineqTrajConstr = std::make_shared<copra::TrajectoryConstraint>(E, f);
 // Create an equality constraint
-auto eqTrajConstr = std::make_shared<mpc::TrajectoryConstraint>(E, f, false);
+auto eqTrajConstr = std::make_shared<copra::TrajectoryConstraint>(E, f, false);
 // Create a bound constraint
 // lower and upper are step-vector or whole-vector
-auto boundTrajConstr = std::make_shared<mpc::TrajectoryBoundConstraint>(lower, upper);
+auto boundTrajConstr = std::make_shared<copra::TrajectoryBoundConstraint>(lower, upper);
 ```
 
 Note: to assign infinite born, you have to include the stl `<limits>` and use `std::numeric_limits<double>::max()`. In python side, you have to use `float('Inf')`.
@@ -198,12 +189,12 @@ and the control bound constraint \\(\underline{\mathbf{U}} \leq \mathbf{U} \leq 
 ```c++
 // Create an inequality constraint
 // G is step-matrix or whole-matrix, f is step-vector or whole-vector.
-auto ineqControlConstr = std::make_shared<mpc::ControlConstraint>(E, f);
+auto ineqControlConstr = std::make_shared<copra::ControlConstraint>(E, f);
 // Create an equality constraint
-auto eqControlConstr = std::make_shared<mpc::ControlConstraint>(E, f, false);
+auto eqControlConstr = std::make_shared<copra::ControlConstraint>(E, f, false);
 // Create a bound constraint
 // lower and upper are step-vector or whole-vector
-auto boundControlConstr = std::make_shared<mpc::ControlBoundConstraint>(lower, upper);
+auto boundControlConstr = std::make_shared<copra::ControlBoundConstraint>(lower, upper);
 ```
 
 ### Mixed Constraints
@@ -214,9 +205,9 @@ As always:
 ```c++
 // Create an inequality constraint
 // E is step-matrix or whole-matrix,  G is step-matrix or whole-matrix, f is step-vector or whole-vector.
-auto ineqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, f);
+auto ineqMixedConstr = std::make_shared<copra::MixedConstraint>(E, G, f);
 // Create an equality constraint
-auto eqMixedConstr = std::make_shared<mpc::MixedConstraint>(E, f, false);
+auto eqMixedConstr = std::make_shared<copra::MixedConstraint>(E, G, f, false);
 ```
 
 ### Adding and updating a constraint
@@ -228,35 +219,93 @@ It will update the constraints when its solve function is called.
 controller.addConstraint(ineqControlConstr);
 ```
 
-### Constraint removal
-There are two ways of deleting a constraint from the mpc.
-The main and recommended way to do so, is to let the mpc handles it.
+## Cost functions
+As for constraints, the library provides several types of cost functions.
+All the costs can be created using step-matrix or whole-matrix.
+They also need to be wrapped in a shared pointer in order to be passed to the mpc and may more than one.
+
+### Target Cost
+The target cost function minimizes \\(\|\|M\mathbf{x}_N + \mathbf{p}\|\|\\).
+\\(M\\) must be a step-matrix and \\(p\\) must be a step-vector.
+
+```c++
+// Create a target cost
+auto targetCost = std::make_shared<copra::TargetCost>(M, p);
+```
+
+### Trajectory Cost
+The trajectory cost function minimizes \\(\|\|M\mathbf{X} + \mathbf{p}\|\|\\).
+
+```c++
+// Create a trajectory cost
+// M is step-matrix or whole-matrix, p is step-vector or whole-vector.
+auto trajectoryCost = std::make_shared<copra::TrajectoryCost>(M, p);
+```
+
+### Control Cost
+The control cost minimizes \\(\|\|N\mathbf{U} + \mathbf{p}\|\|\\).
+
+```c++
+// Create a control cost
+// M is step-matrix or whole-matrix, p is step-vector or whole-vector.
+auto ControlCost = std::make_shared<copra::ControlCost>(N, p);
+```
+
+### Mixed Cost
+The mixed cost minimizes \\(\|\|N\mathbf{X} + N\mathbf{U} + \mathbf{p}\|\|\\).
+
+```c++
+// Create a mixed cost
+// M is step-matrix or whole-matrix, N is step-matrix or whole-matrix, p is step-vector or whole-vector.
+auto mixedCost = std::make_shared<copra::MixedCost>(M, N, p);
+```
+
+## Cost and constraint specificities
+There are several helper tools for cost functions and constraints.
+
+### Removal
+There are two ways of deleting a constraint from the copra.
+The main way is to let the mpc handles it.
 In the `solve` function and at the end, the mpc checks whether or not a constraint needs to be deleted.
 A constraint is deleted if the user (you) has deleted his shared pointer of the constraint.
-If you keep a shared pointer of the constraint alive, the constraint remains in the mpc.
-Another way is to call the function `Needs to be reimplemented`
+If you keep a shared pointer of the constraint alive, the constraint remains in the copra.
+Another way is to call the function `removeCost` and `removeConstraint`
 
 ### The autoSpan function
-The `autoSpan` function is present in all constraints.
-This method needs to be called if you have created a constraint with step-matrix/vector and whole-matrix/vector.
-For example, if you have a constant matrix \\(G\\) (so same matrix for one step) for the control constraint and
-a whole-vector \\(\mathbf{f}\\) (so for the full horizon), you can pass the two matrices to the constraint and then call the autoSpan function.
+The `autoSpan` function is present in all constraints and cost.
+This method needs to be called if you have created a constraint that mixes step-matrix/vector with whole-matrix/vector.
+For example, if you have a constant step-matrix \\(G\\) and a whole-vector \\(\mathbf{f}\\), 
+you can pass the two matrices to the constraint and then call the autoSpan function.
 
 ## Changing the QP solver
 Depending on your compilation state, 4 QP solvers are implemented.
 You can change at anytime the QP to use for solving your problem.
 The current available QP are:
+
  * QuadProg (Default one)
  * QLD
  * Gurobi
  * LSSOL (need commercial license)
+
 To change the QP:
 
 ```c++
 // Create an instance of a mpc with a different QP
-mpc::MPCTypeFull controller(mpc::SolverFlag::QLD)
-// Adding an inequality control constraint
-controller.selectQPSolver(mpc::SolverFlag::GUROBIDense)
+copra::LMPC controller(copra::SolverFlag::QLD)
+// Change the QP at any time
+controller.selectQPSolver(copra::SolverFlag::GUROBIDense)
+```
+
+If the default setting of a QP solver is not enough, it is possible to give the controller a user-defined QP.
+
+```c++
+// Create your QP
+std::unique_ptr<Eigen::QLD> solver = solverFactory(copra::SolverFlag::QLD);
+// Make change here
+solver->SI_feasibilityTolerance(1e-8);
+// ...
+// Give it to the QP
+controller.useSolver(std::move(solver));
 ```
 
 ## Python users
@@ -269,13 +318,7 @@ The lib minieigen provides all the tools needed to use Eigen in Python.
 
 ## Improving performance and building time
 First, you can measure building and solving time of the mpc using `solveTime()` and `solveAndBuildTime()` functions.
-This computes internally the time needed to uild the problem and to solve it.
-
-### Prefer MPCTypeLast over MPCTypeFull for single target
-The class `MPCTypeFull()` is really made for trajectory but it is possible to give a target. 
-If you do so, the mpc will try to reach the target as fast as it can, so it may reach before the end of the horizon of time.
-Whereas, `MPCTypeLast()` only tries to reach the target at the end of the horizon of time. 
-Internally, `MPCTypeLast()` has less computation to do and thus, is faaster.
+This computes internally the time needed to build the problem and to solve it.
 
 ### Updating the system yourself
 The initialization of the preview system is just meant to allocate memory for all the needed matrices (\\(\Phi\\), \\(\Psi\\), etc...)
@@ -286,9 +329,9 @@ The `solve()` function will be then faster since it does not have to build the p
 
 Note that you have a full control of the preview system.
 You can voluntary modify the matrices inside the preview system if you have specific matrices.
-Don't forget the (re)initialize the mpc if you have changed the dimension of the problem.
+Don't forget to (re)initialize the mpc if you have changed the dimension of the problem.
 
-### Give rvalue to the constraints
+### Give rvalue to the constraints and costs
 Constraints constructor and weights functions use universal reference to allow move semantic of rvalue and copy of lvalue. 
 In the case you don't need to keep the constraint matrices, prefer rvalue as parameters. This feature is not available for python users.
 
@@ -299,153 +342,5 @@ Note that for some constraints (control constraints and bound constraints) a mov
 
 Sparse matrix will be used to improve performance in future release.
 
-## Examples
-I will show in this section a step-by-step how-to-do example.
-This example aims to solve a common problem in humanoid robot dynamic walk.
-In dynamic walk, a model preview control is used to find a trajectory for the Center of Mass (CoM) of the robot considering its Zero-momentum Point (ZMP). 
-The ZMP is a point on the ground which must stay inside the polygon defined by the foot of the robot. 
-The equation is given by
-$$
-    \ddot{c} = ??
-$$
-
-This equation can be written as a linear system.
-
-$$
-    linear system
-$$
-
-From it, we can easily perform the discretization.
-
-$$
-    Discretize system
-$$
-
-### Full example in C++
-First of all, the headers
-
-```c++
-// stl headers
-#include <iostream>
-#include <memory>
-#include <utility>
-
-// mpc headers
-#include <mpc/constraints.h>
-#include <mpc/previewController.h>
-#include <mpc/PreviewSystem.h>
-```
-
-then need to create the system
-
-```c++
-double T = 0.2;
-Eigen::MatrixXd A(Eigen::MatrixXd::Identity(4, 4));
-A(0, 2) = T;
-A(2, 3) = T;
-Eigen::MatrixXd B(4, 2);
-B << T*T/2,     0,
-         0, T*T/2, 
-         T,     0, 
-         0,     T;
-d = ?;
-x_0 = ?;
-x_d = ?;
-int nrStep = 10;
-auto ps = std::make_shared<mpc::PreviewSystem>(A, B, d, x_0, x_d, nrStep);
-```
-
-Then we create the mixed constraint 
-
-```c++
-Eigen::MatrixXd E, G;
-Eigen::VectorXd f;
-
-// From Polytope will set the matrix E, G and f
-FromPolytope(E, G, f);
-constr = std::make_shared<mpc::MixedConstraint>(E, G, f);
-```
-
-Create the mpc and solve
-
-```c++
-mpc::MPCTypeLast controller(ps);
-controller.addConstraint(constr);
-controller.weights(Eigen::Vector4d(10000, 10000, 100, 100), Eigen::Vector2d(1, 1));
-controller.solve();
-```
-
-Finally, get the results
-
-```c++
-Eigen::VectorXd trajectory(controller.trajectory());
-Eigen::VectorXd control(controller.control());
-int halfLen = trajectory.rows() / 2; // = 4 * (nrSteps + 1) / 2
-Eigen::VectorXd comPos(halfLen)
-Eigen::VectorXd comVel(halfLen)
-for (int i = 0; i < halfLen; i += 2) {
-    comPos.segment(2 * i, 2) = trajectory.segment(2 * i, 2);
-    comVel.segment(2 * i, 2) = trajectory.segment(2 * (i + 1), 2);
-}
-```
-
-### Full example in Python
-First of all, the headers
-
-```python
-from minieigen import *
-import mpc
-```
-
-then need to create the system
-
-```python
-T = 0.2
-A = MatrixXd.Identity(4, 4)
-A[0, 2] = T
-A[2, 3] = T
-B = MatrixXd([[T*T/2,     0],
-              [0,     T*T/2], 
-              [T,         0], 
-              [0,         T]])
-d = ?
-x_0 = ?
-x_d = ?
-nrStep = 10
-ps = mpc.NewPreviewSystem(A, B, d, x_0, x_d, nrStep);
-```
-
-Then we create the mixed constraint 
-
-```python
-# From Polytope will set the matrix E, G and f
-E, G, f = FromPolytope()
-constr = mpc.NewMixedConstraint(E, G, f)
-```
-
-Create the mpc and solve
-
-```python
-controller = mpc.MPCTypeLast(ps)
-controller.addConstraint(constr)
-controller.weights(VectorXd([10000, 10000, 100, 100]), Vector2d(1, 1))
-controller.solve();
-```
-
-Finally, get the results
-
-```python
-trajectory = controller.trajectory();
-control = controller.control();
-halfLen = trajectory.rows() / 2; # = 4 * (nrSteps + 1) / 2
-comPos = VectorXd.Identity(halfLen)
-comVel = VectorXd.Identity(halfLen)
-for i in xrange(halfLen, 0, 2):
-    comPos[i] = trajectory[2 * i];
-    comPos[i + 1] = trajectory[2 * i + 1];
-    comVel[i] = trajectory[2 * (i + 1)];
-    comVel[i + 1] = trajectory[2 * (i + 1) + 1]
-```
-
 ## Pymanoid
-[Pymanoid]() is library developed in python by [Stéphane Caron]() which allows you to use the model preview controller. It is meant for humanoid robots and displays nice features in [openrave]().
+[Pymanoid](https://github.com/stephane-caron/pymanoid) is library developed in python by [Stéphane Caron](https://scaron.info/) which allows you to use the model preview controller for motion planning and ele.
